# repo-memoir

./: .gitignore  README.md  pyproject.toml  repomemoir.yaml.example
.claude/skills/repo-memoir/: SKILL.md  skill.py
.github/workflows/: ci.yml
repomemoir/: __init__.py  cli.py  config.py  generator.py  llm.py  models.py  updater.py
repomemoir/analyzers/: __init__.py  chapters.py  identity.py  turning_points.py
repomemoir/extractors/: __init__.py  commits.py  contributors.py  github_cache.py  issues.py  prs.py  repo_meta.py
tests/: test_chapters.py  test_cli_cache_controls.py  test_cli_inspect_format.py  test_cli_signals.py  test_generator_markdown.py  test_generator_strict_grounding.py  test_github_cache.py  test_llm_embedding_cache.py  test_models_offline_flag.py  test_models_roundtrip.py  test_offline_mode.py  test_turning_points.py  test_updater.py  test_updater_incremental.py
