[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-memoir"
version = "0.1.0"
description = "Generate a living narrative memoir for codebases"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "gitpython>=3.1.0",
  "PyGithub>=2.3.0",
  "scikit-learn>=1.4.0",
  "hdbscan>=0.8.33",
  "PyYAML>=6.0.0",
  "requests>=2.31.0",
]

[project.scripts]
repo-memoir = "repomemoir.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["repomemoir*"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
check_untyped_defs = false
exclude = ["^tests/"]
disable_error_code = ["import-untyped", "arg-type", "misc", "attr-defined", "unused-ignore", "type-var"]
